# walk-the-dog

./: Cargo.toml  README.md  package-lock.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: browser.rs  engine.rs  game.rs  lib.rs  segment.rs  sound.rs  walk_the_dog.rs
src/engine/: audio.rs  click_event.rs  game.rs  game_loop.rs  image.rs  key_event.rs  load_asset.rs  point.rs  rect.rs  renderer.rs  sheet.rs  sprite_sheet.rs
src/walk_the_dog/: barrier.rs  game.rs  obstacle.rs  platform.rs  redhatboy.rs  redhatboy_state.rs  sheet.rs  test_browser.rs  walk_the_dog_state.rs  walk_the_dog_state_machine.rs
static/: index.html  style.css
