# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "Walk the Dog - the game for the Rust Games with Web assembly book"
version = "0.1.0"
authors = ["virtual-hippo"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = {versioin = "0.2.78", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rand = "0.8.4"
futures = "0.3.18"
wasm-bindgen-futures = "0.4.28"
getrandom = {verson = "0.2.3", features = ["js"]}
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.51"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.55"
features = ["console", "CanvasRenderingContext2d","Document", "Element", "HtmlCanvasElement", "HtmlImageElement", "Response", "Window"]


# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.28"
js-sys = "0.3.55"
